k8s/apps/monitoring/grafana-operator/instance/route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.jnobrega.com
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
